styling fixes, spacing fixes for gtlt

--- a/global-style.css
+++ b/global-style.css
@@ -5,5 +5,55 @@ html, body {
   font-family: 'Muli', sans-serif;
   width: 100%;
   height: 100%;
-  background-color: lightgray;
+  background-color: #e7e7e7;
+}
+
+/* icons */
+.solid-check {
+  background-image: url("https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/check.svg");
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  width: 150px;
+  height: 150px;
+}
+
+.solid-times {
+  background-image: url("https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/times.svg");
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  width: 150px;
+  height: 150px;
+}
+
+.solid-less-than {
+  background-image: url("https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/less-than.svg");
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  width: 150px;
+  height: 150px;
+}
+
+.solid-sync-alt {
+  background-image: url("https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/sync-alt.svg");
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  width: 150px;
+  height: 150px;
+}
+
+.solid-greater-than {
+  background-image: url("https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/greater-than.svg");
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  width: 150px;
+  height: 150px;
+}
+
+/* icon colors */
+.icon-green {
+  filter: invert(1) grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
+}
+
+.icon-red {
+  filter: invert(1) grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
 }
